v1.1 (2009-06-10)

Interfaces

124 defined
 75 tested
 11 untestable

Externs

156 defined
 76 tested
 21 untestable

See interfaces.txt for details.

Since the last release, I have gotten the EVRPresenter to work.  This
was a HUGE and finicky project.  It required adding support for a
number of MF interfaces.

So, in order to have a release of MFNet that would work with this new 
sample, I decided it was time to do a v1.1.  Since I was doing another 
release I decided to also attack all the remaining Vista interfaces. 
I picked the last of the easy interfaces, and all of the remaining 
ones I find to be interesting.  

At this point, I don't plan to do any more of the vista interfaces 
unless there are specific requests.  If you request an interface, be 
prepared to help test it!


-----------------------------------------------------------------
v1.0 (2007-09-23)

Interfaces

123 defined
 55 tested
 11 untestable

Externs

156 defined
 71 tested
 21 untestable

See interfaces.txt for details.

There have been *significant* changes since beta 2.  Commenting,
more enums, and some serious re-working of the PropVariant class,
which affects a number of methods.

In addition to testing a bunch more interfaces and externs, I have 
finished translating 7 of the 8 samples that ship with the the PSDK, 
plus 1 sample that only exists in the mf sdk docs.  Note: The samples 
are in a separate download.  Make sure you grab it too!

-----------------------------------------------------------------
v.091 beta 2

A few more tested externs (for the GrayScale sample)
Two more tested interfaces: IMFTransform, IMF2DBuffer
Fix DllImport statement for PropVariantClear (Thanks Stephen!)
Helper class MFInt

General cleanup of some of the methods in the untested area
Fix the name for GetGUID to match MF docs
Change SafeRelease to a much simpler function
Remove ParseError in favor of Marshal.GetHRForException()
Remove ISequentialStream & IStream in favor of .Net's implementation
